@@ -1,60 +1,0 @@
-\name{ggmFit}
-\alias{ggmFit}
-%- Also NEED an '\alias' for EACH other topic documented here.
-\title{
-Obtian fit measures of a Gaussian graphical model
-}
-\description{
-Obtain fit measures of a given Gaussian graphical model (GGM). Input can be either a partial correlation matrix, inverse covariance matrix or \code{qgraph} object.
-}
-\usage{
-ggmFit(pcor, covMat, sampleSize, invSigma, refit = TRUE, mimic = c("lavaan", "lvnet"), ebicTuning = 0.5)
-}
-%- maybe also 'usage' for other objects documented here.
-\arguments{
-  \item{pcor}{
-Implied partial correlation matrix or \code{qgraph} object.
-}
-  \item{covMat}{
-Observed variance-covariance matrix
-}
-  \item{sampleSize}{
-The sample size used in computing the variance-covariance matrix
-}
-  \item{invSigma}{
-Implied inverse variance-covariance matrix. If this object is assigned \code{pcor} is not used.
-}
-  \item{refit}{
-Logical, should the network be refitted using \code{\link[glasso]{glasso}}?
-}
-  \item{mimic}{
-Mimic option, see \code{\link{lvnet}}.
-}
-  \item{ebicTuning}{
-EBIC tuning parameter.
-}
-}
-\author{
-Sacha Epskamp <mail@sachaepskamp.com>
-}
-
-\examples{
-library("lavaan")
-library("psych")
-library("qgraph")
-
-# Load BFI data:
-data(bfi)
-bfi <- bfi[,1:25]
-
-# Covariance matrix:
-CovMat <- cov(bfi[,1:25], use="pairwise.complete.obs")
-
-# Compute network:
-EBICgraph <- qgraph(CovMat, graph = "glasso", sampleSize = nrow(bfi),
-                    tuning = 0.5, layout = "spring", title = "BIC", details = TRUE)
-
-# Obtain fit measures via lvnet:
-fitNetwork <- ggmFit(EBICgraph, CovMat, nrow(bfi))
-fitNetwork
-}
